src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <description>Track the Client&apos;s annual income</description>
        <label>Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,001-$250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,001-$500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,001-$750,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$750,000-$1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,001-$5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$5,000,001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <description>Name of the Client&apos;s assistant</description>
        <label>Assistant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <description>Phone number of the Client&apos;s assistant</description>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthday_This_Year__c</fullName>
        <description>Formula field used to transform Birthdate into Birthday this year.  For example, this formula transforms Client birth date of 11/26/1972 to 11/26/2007.  This makes it easy to build reports, list views and mail merge list views like “Birthdays This Month”.</description>
        <formula>DATE( YEAR(  DATEVALUE( NOW() ) ) , MONTH( Birthdate ) , DAY( Birthdate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <description>Track the Client&apos;s business email address</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Preferences__c</fullName>
        <description>Track Client preferences</description>
        <label>Client Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Education Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Preservation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether Client is on a do not call list</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track whether the Client is the head of a household</description>
        <label>Head of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Medical_Concerns__c</fullName>
        <description>Track Health / Medical Concern interests</description>
        <label>Health / Medical Concerns</label>
        <picklist>
            <picklistValues>
                <fullName>AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liver Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteoporosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pregnancy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <description>Track Client hobbies of interest</description>
        <label>Hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investment_Interests__c</fullName>
        <description>Track Client investement interests</description>
        <label>Investment Interests</label>
        <picklist>
            <picklistValues>
                <fullName>401(k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Notes__c</fullName>
        <description>Capture Client key notes</description>
        <label>Key Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Track the current marital status of the Client</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Client middle name</description>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Pronunciation__c</fullName>
        <description>Capture the proper pronunciation of the Client&apos;s name</description>
        <label>Name Pronunciation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <description>Track Client personal interests</description>
        <label>Personal Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Politics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>Track the preferred contact method for the Client</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <description>Track when the Client prefers to be contacted</description>
        <label>Preferred Contact Time</label>
        <picklist>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professional_Interests__c</fullName>
        <description>Track Client professional interests</description>
        <label>Professional Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Social_Security_Tax_ID__c</fullName>
        <description>Track the social security number or tax identifier for the Client</description>
        <label>Social Security / Tax ID #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Client suffix</description>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>U_S_Citizenship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track whether the Client is a US citizen or not.</description>
        <label>U.S. Citizenship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Dependents__c</fullName>
        <description>Track the number of dependents for the Client</description>
        <label># of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>